--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.0",
     "@reduxjs/toolkit": "^2.2.5",
     "chart.js": "^4.4.3",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
