assign question completed successfully

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^6.1.0",
     "@reduxjs/toolkit": "^2.2.5",
     "chart.js": "^4.4.3",
+    "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
