--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "html-to-draftjs": "^1.5.0",
+    "lucide-react": "^0.453.0",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
