--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "recharts": "^2.13.0-alpha.4"
+    "recharts": "^2.13.0-alpha.4",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.18",
