--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.13.0-alpha.4",
     "styled-components": "^6.1.13"
   },
