--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.0",
+    "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@shadcn/ui": "^0.0.4",
     "chart.js": "^4.4.3",
@@ -32,6 +37,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
