--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.453.0",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
